--- a/components/Writing/WritingIndex.module.css
+++ b/components/Writing/WritingIndex.module.css
@@ -60,7 +60,7 @@
 }
 
 .entryTag :global(.t-registry) {
-  font-size: 13px;
+  font-size: 14px;
   margin-bottom: 0;
   display: inline;
 }
